--- a/src/Search.css
+++ b/src/Search.css
@@ -5,6 +5,7 @@
     border:1px solid #0a0e13;
     border-radius: 5px;
     
+    
 }
 
 .Search h1{
@@ -31,15 +32,17 @@
         line-height:19px
     }
 
-    .Search form {
-        margin-bottom: 20px;
-        padding-top: 10px;
+    .Search .form {
+        margin: 60px;
+        padding-top: 100px;
     }
 
-    .Search temperature  {
-        color:black;
+    .Search .temperature  {
+        color:rgb(33,33,33);
         font-size: 64px;
-        line-height: 1px;
+        color:black;
+        
+        line-height: 64px;
         font-weight: 400px;
        
    
@@ -53,7 +56,7 @@
            position: relative;
            top:-10px;
        }
-       .Search .unit{
+       .Search .units{
            position:relative;
            font-size: 16px;
            top:-33px;
