--- a/src/Search.css
+++ b/src/Search.css
@@ -9,7 +9,7 @@
 }
 
 .Search h1{
-    
+    padding-top: 20px;
     color:black;
     font-size: 24px;
     font-weight: 100;
@@ -33,8 +33,8 @@
     }
 
     .Search .form {
-        margin: 80px;
-        padding-top: 100px;
+        margin: 0px;
+        padding-top: 10px;
     }
 
     .Search .temperature  {
@@ -48,7 +48,7 @@
    
        }
       
-       
+     
        .Search .img
         {
            margin-right:2px;
@@ -60,7 +60,7 @@
            position:relative;
            font-size: 16px;
            top:-33px;
-           color:red;
+           color:rgb(17, 14, 14);
        }
       
     
